carina-cli/tests/fixtures/negative/type_mismatch_bool.crn
# Negative test: String value where bool is expected
# Expected: validation error for enable_dns_support

provider awscc {
  region = awscc.Region.ap_northeast_1
}

awscc.ec2.Vpc {
  cidr_block         = '10.0.0.0/16'
  enable_dns_support = 'true'
}
